--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Movie List</string>
+    <string name="book_movie">Book the movie</string>
+    <string name="extra_loading_message">Carregando ...</string>
+    <string name="extra_retry_button">T ry  Again</string>
+    <string name="extra_default_error_message">Sorry, an unexpected error occurred.</string>
+    <string name="extra_network_error_message">Desculpe, não foi possivel conectar-se a internet.</string>
 </resources>
