--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="extra_loading_message">Carregando ...</string>
     <string name="extra_retry_button">T ry  Again</string>
     <string name="extra_default_error_message">Sorry, an unexpected error occurred.</string>
-    <string name="extra_network_error_message">Desculpe, não foi possivel conectar-se a internet.</string>
+    <string name="extra_network_error_message">Sorry, please check your internet connection and try again.</string>
 </resources>
